[fix] erros documentação
