# docs/swagger.json
@@ -5,9 +5,9 @@
         "license": {}
     },
     "paths": {
-        "/recipe/": {
+        "/recipes/": {
             "get": {
-                "description": "Gera uma lista de receitas dado ingredientews",
+                "description": "Gera uma lista de receitas dado ingredientes",
                 "produces": [
                     "application/json"
                 ],
@@ -18,7 +18,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Array de ngredientes (separados por virsgula)",
+                        "description": "Array de ngredientes (separados por virgula)",
                         "name": "i",
                         "in": "query"
                     }
